fix logo in dark mode

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -57,7 +57,7 @@ swiper-container .swiper-pagination-bullets {
 
 @layer base {
   h1{
-    @apply font-[600] text-2xl md:text-xl;
+    @apply font-[600] ;
   }
   h2 {
     @apply text-xl lg:text-[18px] sm:text-[14px] font-[600] sm:leading-5 dark:text-white;
@@ -78,7 +78,7 @@ swiper-container .swiper-pagination-bullets {
     @apply text-white bg-blue-800 w-[30px] h-[30px] border inline-flex justify-center items-center rounded-full;
   }
   .logo {
-    @apply text-[50px] lg:text-[35px] font-[600] text-center tracking-[3px] font-playfair text-red-600 bg-clip-text bg-gradient-to-l text-transparent from-red-800 via-red-600 to-blue-600;
+    @apply text-[50px] lg:text-[35px] font-[600] text-center tracking-[3px] font-playfair text-red-600  bg-gradient-to-l text-transparent from-red-800 via-red-600 to-blue-600;
   }
   .badge-review {
     @apply bg-blue-100 dark:bg-blue-800 text-blue-800 dark:text-blue-100 text-xs font-medium mr-2 px-2.5 py-0.5 rounded border border-blue-400;
